add middleware for processing errors  and swager was updated
